# jromp-mpi-examples

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  build.gradle.kts  prepare_libs.bash  settings.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
src/main/c/jromp/mpi/examples/: blocking.c  burro.c  cross.c  full_parallel.c
src/main/java/io/github/mpi/: Main.java
src/main/java/jromp/mpi/examples/: Blocking.java  Burro.java  Cross.java  FullParallel.java  Utils.java
